[gd_scene load_steps=23 format=3 uid="uid://b385dsdhhtn6h"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_ahcg7"]
[ext_resource type="Texture2D" uid="uid://286olsfwgydw" path="res://Assets/Sprites/Iris/Iris_Main.png" id="2_27228"]
[ext_resource type="Script" path="res://Scenes/Player/WeaponSlot.gd" id="3_3fei1"]
[ext_resource type="PackedScene" uid="uid://1gdvtd6tre6m" path="res://Scenes/Weapons/sword.tscn" id="4_gasyu"]
[ext_resource type="Script" path="res://Scenes/Player/PlayerModel.gd" id="5_h8o3l"]
[ext_resource type="PackedScene" uid="uid://c1vqou6hdlnab" path="res://Scenes/Feedbacks/attack_zone_indicator.tscn" id="6_ylqh4"]
[ext_resource type="Texture2D" uid="uid://vs5175pyb1p4" path="res://Assets/Sprites/UI/Generic_Progress_Bar_3x3.png" id="7_2f2ww"]
[ext_resource type="SpriteFrames" uid="uid://dv3ewevoxpedp" path="res://Scenes/Feedbacks/spin_slash.tres" id="8_ud7el"]
[ext_resource type="Script" path="res://Scenes/Player/DashTrail.gd" id="9_eg2ab"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pnlfx"]
radius = 3.5
height = 9.0

[sub_resource type="Animation" id="Animation_xxulm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_884dx"]
resource_name = "iris_idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_h8pd5"]
resource_name = "iris_run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_uin71"]
resource_name = "iris_spin"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bj4su"]
_data = {
"RESET": SubResource("Animation_xxulm"),
"iris_idle": SubResource("Animation_884dx"),
"iris_run": SubResource("Animation_h8pd5"),
"iris_spin": SubResource("Animation_uin71")
}

[sub_resource type="Animation" id="Animation_1qdtp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.35619]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_l3l42"]
resource_name = "SwordOberhau"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(4.92458, 0.217638, 1.62451),
"update": 0,
"values": [-2.35619, 0.0, 2.35619]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-1, 1, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack_apex_reached"
}, {
"args": [],
"method": &"on_attack_animation_done"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(5, 1), Vector2(0, 3)]
}

[sub_resource type="Animation" id="Animation_3vo41"]
resource_name = "SwordUnterhau"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(4.92458, 0.217638, 1.62451),
"update": 0,
"values": [2.35619, -1.0098, -2.35619]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, -1, -1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack_apex_reached"
}, {
"args": [],
"method": &"on_attack_animation_done"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 3), Vector2(5, 1), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_38sgq"]
resource_name = "spin"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2n0nc"]
_data = {
"RESET": SubResource("Animation_1qdtp"),
"SwordOberhau": SubResource("Animation_l3l42"),
"SwordUnterhau": SubResource("Animation_3vo41"),
"spin": SubResource("Animation_38sgq")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_y0m4x"]
radius = 23.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7lbn"]
size = Vector2(23, 2)

[node name="PlayerIris" type="CharacterBody2D"]
z_index = 10
collision_mask = 12
motion_mode = 1
script = ExtResource("1_ahcg7")

[node name="Model" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_h8o3l")
_max_HP = 6
walk_speed = 50.0
_xp_to_level_up = 10
_stamina_regen_per_second = 20.0
_max_stamina = 100.0
_max_rage = 100.0
dash_distance = 75.0
dash_speed = 300.0
dash_cost = 10.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_27228")
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 3.5)
shape = SubResource("CapsuleShape2D_pnlfx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bj4su")
}

[node name="WeaponSlotRoot" type="Node2D" parent="."]
position = Vector2(0, 1)
script = ExtResource("3_3fei1")

[node name="WeaponSlot" type="Node2D" parent="WeaponSlotRoot"]
z_index = 1
position = Vector2(0, 1)
rotation = -2.35619

[node name="Sword" parent="WeaponSlotRoot/WeaponSlot" instance=ExtResource("4_gasyu")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="WeaponSlotRoot/WeaponSlot"]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_2n0nc")
}

[node name="AttackZoneArc" type="Area2D" parent="WeaponSlotRoot"]
unique_name_in_owner = true
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 8

[node name="CollisionArc" type="CollisionShape2D" parent="WeaponSlotRoot/AttackZoneArc"]
shape = SubResource("CircleShape2D_y0m4x")

[node name="AttackZoneEdgeTop" type="Area2D" parent="WeaponSlotRoot"]
unique_name_in_owner = true
position = Vector2(0, 1)
rotation = -0.785398
collision_layer = 0
collision_mask = 8

[node name="CollisionRect" type="CollisionShape2D" parent="WeaponSlotRoot/AttackZoneEdgeTop"]
position = Vector2(11.5, 0)
shape = SubResource("RectangleShape2D_t7lbn")

[node name="AttackZoneEdgeBottom" type="Area2D" parent="WeaponSlotRoot"]
unique_name_in_owner = true
position = Vector2(0, 1)
rotation = 0.785398
collision_layer = 0
collision_mask = 8

[node name="CollisionRect" type="CollisionShape2D" parent="WeaponSlotRoot/AttackZoneEdgeBottom"]
position = Vector2(11.5, 0)
shape = SubResource("RectangleShape2D_t7lbn")

[node name="CameraRemote" type="RemoteTransform2D" parent="."]
unique_name_in_owner = true

[node name="AttackZoneIndicator" parent="." instance=ExtResource("6_ylqh4")]
unique_name_in_owner = true
position = Vector2(0, 1)

[node name="RageProgressBar" type="TextureProgressBar" parent="."]
offset_left = -5.0
offset_top = 10.0
offset_right = 5.0
offset_bottom = 11.0
max_value = 1.0
step = 0.01
value = 0.5
nine_patch_stretch = true
texture_under = ExtResource("7_2f2ww")
texture_progress = ExtResource("7_2f2ww")
tint_under = Color(0.345098, 0.258824, 0, 0.505882)
tint_progress = Color(1, 0.478431, 0, 1)

[node name="HealthProgressBar" type="TextureProgressBar" parent="."]
offset_left = -5.0
offset_top = 9.0
offset_right = 5.0
offset_bottom = 10.0
max_value = 1.0
step = 0.01
value = 0.5
nine_patch_stretch = true
texture_under = ExtResource("7_2f2ww")
texture_progress = ExtResource("7_2f2ww")
tint_under = Color(0.372549, 0, 0, 0.47451)
tint_progress = Color(1, 0, 0, 1)

[node name="Vfx" type="Node2D" parent="."]

[node name="SpinSlash" type="AnimatedSprite2D" parent="Vfx"]
unique_name_in_owner = true
sprite_frames = ExtResource("8_ud7el")
animation = &"RESET"

[node name="DashTrail" type="Node2D" parent="Vfx" node_paths=PackedStringArray("sprites", "character_sprite")]
script = ExtResource("9_eg2ab")
sprites = [NodePath("Sprite2D"), NodePath("Sprite2D2"), NodePath("Sprite2D3"), NodePath("Sprite2D4"), NodePath("Sprite2D5"), NodePath("Sprite2D6"), NodePath("Sprite2D7"), NodePath("Sprite2D8"), NodePath("Sprite2D9"), NodePath("Sprite2D10")]
character_sprite = NodePath("../../Sprite2D")
start_color = Color(0.627451, 0.286275, 0.901961, 1)

[node name="Sprite2D" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="Sprite2D2" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="Sprite2D3" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="Sprite2D4" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="Sprite2D5" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="Sprite2D6" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="Sprite2D7" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="Sprite2D8" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="Sprite2D9" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="Sprite2D10" type="Sprite2D" parent="Vfx/DashTrail"]
top_level = true
z_index = 6
texture = ExtResource("2_27228")
hframes = 4
vframes = 4
region_rect = Rect2(0, 0, 16, 16)
